--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,6 @@
 
 	"permissions": 
 	[
-	 	"activeTab",
 	 	"tabs",
 		"notifications",
 		"http://*/*",
@@ -16,22 +15,22 @@
 
 	"icons": 
 	{ 
-		"16": "img/lctv16.png",
-		"48": "img/lctv48.png",
-		"128": "img/lctv128.png" 
+		"16": "16.png",
+		"48": "48.png",
+		"128": "128.png" 
 	},
 
 	"browser_action": 
 	{
 		"default_icon": 
 		{                    
-			"16": "img/lctv16.png"         
+			"16": "16.png"         
 		},
 		"default_popup": "popup.html"
 	},
 
   	"background":
-    {
+	{
 		"scripts": ["js/jquery-2.0.3.min.js", "js/bootstrap.min.js", "js/background.js"]
-    }
+	}
 }
